sticky contents and animated icons

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 
 <body>
 
-	<!--To top button-->
-
-	<a href="#the_top"><img class="top_btn" src="images/to-top.png"></a>
-
 
 	<div class="bg_square">
 
@@ -56,7 +52,7 @@
 
 						<a name="our_goal"></a>
 
-						<h2>Our Goal</h2>
+						<h2>Our Goal <img class="section_icons" src="images/flag.png"></h2>
 
 						<p>The WCS, or "Wildlife Conservation Society" is a non-profit organization dedicated to the
 							protection of wildlife. They are a global organization, operating in over 65 countries.
@@ -78,7 +74,7 @@
 				<section class="bio_text">
 					<a name="heuristic_analysis">
 
-						<h2>Heuristic Analysis</h2>
+						<h2>Heuristic Analysis <img class="section_icons" src="images/glass.png"></h2>
 
 						<p> Looking at their current site, its plain to see that there is room for improvement. Why does
 							it have this big fat side navigation? Why not have it on the top like most other websites?
@@ -129,7 +125,7 @@
 				<section class="bio_text">
 					<a name="ux_research">
 
-						<h2>UX Research</h2>
+						<h2>UX Research <img class="section_icons" src="images/book.png"></h2>
 
 						<p> With nothing to go off of from the WCS themselves, we began our research from scratch.
 							Conducting interviews, gathering survey data, and testing the current website with various
@@ -160,7 +156,7 @@
 				<section class="bio_text">
 					<a name="lofi_mockups">
 
-						<h2>Low Fidelity Mockups</h2>
+						<h2>Low Fidelity Mockups <img class="section_icons" src="images/woodsword.png"></h2>
 						<p> We decided that the goal of our prototype should be to entice people to contribute in any
 							way they can. Not only with donations, but also through inexspensive means such as
 							volunteering and signing petitions. We wanted to make this quick, easy, and ensure that it
@@ -211,7 +207,7 @@
 				<section class="bio_text">
 					<a name="hifi_mockups">
 
-						<h2>High Fidelity Mockups</h2>
+						<h2>High Fidelity Mockups <img class="section_icons" src="images/sword.png"></h2>
 						<p> After extensive testing on the previous protoype, we created high fidelity prototypes for
 							both mobile and desktop versions of the website. <br> <br>
 							This is the homepage on desktop: </p>
@@ -252,7 +248,7 @@
 					<a name="try_it">
 
 
-						<h2>Try It Yourself</h2>
+						<h2>Try It Yourself <img class="section_icons" src="images/check.png"></h2>
 
 
 						<p>If you want to try the prototypes, click the links below to try them out on Invision.
