--- a/index.html
+++ b/index.html
@@ -43,14 +43,23 @@
 
 			<div class="bio_rect">
 
-				<a name="the_top">
+					<a name="our_goal"></a>
+
+					<section class="hero">
+						<!---header image-->
+						<section class="hero_text">
+							<h1>UX Case Study: WCS</h1>
+							<p>Take a look at our proposed redesign of the Wild Conservation Society's Website.</p>
+						</section>
+
+					</section>
 
 					<!---Header/Our Goal-->
 					<section class="bio_text">
 
-						<h1>UX Case Study: WCS</h1>
 
-						<a name="our_goal"></a>
+
+						
 
 						<h2>Our Goal <img class="section_icons" src="images/flag.png"></h2>
 
@@ -66,7 +75,7 @@
 							current design. </p>
 					</section>
 
-				</a>
+				
 
 
 
@@ -255,8 +264,8 @@
 							<br> <br></p>
 
 
-						<p > <a class="blockMe"
-								href="https://projects.invisionapp.com/share/SHU4EZ2WA4D#/screens" target="blank">|
+						<p> <a class="blockMe" href="https://projects.invisionapp.com/share/SHU4EZ2WA4D#/screens"
+								target="blank">|
 								Desktop Prototype |
 							</a>
 							<a class="blockMe"
