--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 
-
+<div class="gradient"></div>
 
 <body>
 
@@ -65,7 +65,7 @@
 
 						<p>The WCS, or "Wildlife Conservation Society" is a non-profit organization dedicated to the
 							protection of wildlife. They are a global organization, operating in over 65 countries.
-							They also own many zoos and an aquarium. As succesful as they are, surprisingly enough,
+							They also own many zoos and an aquarium. As successful as they are, surprisingly enough,
 							their website leaves a lot to be desired. So as a team, Justin Blake, Theresa Hoang, and I
 							created
 							a prototype for what an improved WCS website could look like. Unfortunately, the WCS
@@ -121,7 +121,7 @@
 						and it just gets in the way. On the bright side, we loved the way their donation process
 						actually worked. The buttons
 						are simple, eye catching, and informative. Making a donation is relatively painless and this
-						page actually looks pretty good on mobile. But on desktop it definely needs a rework. </p>
+						page actually looks pretty good on mobile. But on desktop it definitely needs a rework. </p>
 
 				</section>
 
@@ -167,12 +167,12 @@
 
 						<h2>Low Fidelity Mockups <img class="section_icons" src="images/woodsword.png"></h2>
 						<p> We decided that the goal of our prototype should be to entice people to contribute in any
-							way they can. Not only with donations, but also through inexspensive means such as
+							way they can. Not only with donations, but also through inexpensive means such as
 							volunteering and signing petitions. We wanted to make this quick, easy, and ensure that it
 							doesn't take you away from browsing the rest of the website. <br> <br>
 
 							The user flow pictured below demonstrates our intended interaction with the website.
-							Ideally, at any point during someones visit they should be able to do something to help the
+							Ideally, at any point during someone's visit they should be able to do something to help the
 							WCS.
 						</p>
 					</a>
@@ -185,11 +185,11 @@
 				<section class="bio_text">
 
 					<p> <br> <br> From what we saw on the website previously, the donation process is actually fairly
-						short. So we decided we wanted to scrap the donation page in favor of a modal.
+						short. So we decided to scrap the donation page in favor of a modal.
 						The idea being that getting through the process on a modal with a couple of quick forms would
 						flow well with the experience of browsing articles. This also let you get right back to what you
 						were doing when you're
-						done donating. This is good not only because its pleasant, but the longer you stick around the
+						done donating. This is good not only because it's pleasant, but the longer you stick around the
 						more likely you are to do something else. Like signing a petition or signing up to volunteer. In
 						the images below you
 						can see a quick paper sketch and a low fidelity mockup of the modal. You can also see that we
@@ -217,8 +217,8 @@
 					<a name="hifi_mockups">
 
 						<h2>High Fidelity Mockups <img class="section_icons" src="images/sword.png"></h2>
-						<p> After extensive testing on the previous protoype, we created high fidelity prototypes for
-							both mobile and desktop versions of the website. <br> <br>
+						<p> After extensive testing on the previous prototype, we created high fidelity prototypes for
+							both mobile and desktop versions of the website.
 							This is the homepage on desktop: </p>
 					</a>
 
@@ -241,9 +241,9 @@
 					<p> So as you can see, we changed the website quite a bit in our design.
 						We didn't really change the branding very much, but we changed the arrangement of the various
 						elements on the page quite a bit.
-						The images are arranged much better and each of them has a clear call to action. In particuler,
+						The images are arranged much better and each of them has a clear call to action. In particular,
 						the hero image and text at the start of the page clearly and concisely
-						tell you what the WCS stands for and prompts you to contribute imediately. On the desktop
+						tell you what the WCS stands for and prompts you to contribute immediately. On the desktop
 						version of the prototype, each of these CTAs have their own page. I highly recommend
 						that you try both of the prototypes for yourself. There's a lot more to them than the images I
 						just showed you. There may yet still be room to improve this, but if this redesign was really
