--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 				<h3><a href="#lofi_mockups">Low Fidelity Mockups</a></h3>
 				<h3><a href="#hifi_mockups">High Fidelity Mockups</a></h3>
 				<h3><a href="#try_it">Try It Yourself</a></h3>
+				<h3><a href="https://ramieshreim.github.io">Back to Homepage</a></h3>
 
 			</div>
 
