--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
 
 						<h2>Heuristic Analysis <img class="section_icons" src="images/glass.png"></h2>
 
-						<p> Looking at their current site, its plain to see that there is room for improvement. Why does
-							it have this big fat side navigation? Why not have it on the top like most other websites?
+						<p> Looking at their current site, its plain to see that there is room for improvement. We weren't a fan
+							of this large side navigation. It's very unusual, and it's not consistent throughout the whole site. 
+							It often changes forms and even disappears, we all agreed that a more consistent top nav would be better.  
 							The way images are stitched together here doesn't really look nice on desktop, and there are
 							three big competing headlines screaming right at you from the start. None of which really
 							inform you what the WCS is about other than the fact that they have something to do with
@@ -129,10 +130,10 @@
 
 				<section class="bio_text">
 
-					<p> <br> <br> <br> On some parts of the website, they even have a side navigation and a top
-						navigation.
-						Why is that? Why not have the global nav and the primary nav stacked on top of each other?
-						framing the content of the page like this just seems sort of odd. </p>
+					<p> <br> <br> <br> On some parts of the website, they even have a side global navigation and a top primary
+						navigation. We really didn't like this at all. We thought that it would be better if the global navigation
+						was stacked on top of the primary navigation. The content would be framed less awkwardly that way. 
+						 </p>
 
 				</section>
 
@@ -167,12 +168,7 @@
 							Conducting interviews, gathering survey data, and testing the current website with various
 							users.
 							We then synthesized that data into an affinity diagram, created a user persona, and a
-							storyboard. We found through our research that many people are interested in wildlife
-							conservation.
-							However, a lot of them, especially younger people, would rather volunteer or sign petitions
-							than donate. As far as UI is concerned, many of our testers had the same issues with the
-							website that we did and
-							almost all of them complained about the navigation.
+							storyboard.
 						</p>
 
 
@@ -183,9 +179,36 @@
 				<!---Survey Data-->
 				<img class="study_img_container" id="study_img" src="images/survey_data.png">
 
+				<section class="bio_text">
+						
+	
+							<p> We learned from our survey data that a surprising number of people have heard of the WCS, 
+								and that many of them are actually really into their cause and are willing to contribute. All 
+								of our survey takers love animals, and most of them consider themselves to be "outdoors people."
+								We agreed that our redesign should encourage people to volunteer. As many of these users are willing to get their
+								hands dirty. 
+							</p>
+	
+	
+					</section>
+
 				<!---User Persona-->
 				<img class="study_img_container" id="study_img" src="images/persona.png">
 
+				<section class="bio_text">
+						
+	
+						<p> Here is our user persona, "James Brown" he is a 24 year old graduate who is also environmentally conscious and occasionally donates to non-profit organizations.
+							This being the case, James is definitely interested activism. He would love to volunteer, but as a recent college graduate
+							he doesn't have a whole lot of money. So even though he loves to donate when he can, it would benefit him a lot to be able to contribute with his time and energy instead. 
+							<br> <br> 
+							As far as UI is concerned, many of our testers had the same issues with the
+							website that we did and
+							almost all of them complained about the navigation.
+						</p>
+
+
+				</section>
 
 
 				<!--Lofi Mockups-->
@@ -252,6 +275,7 @@
 				</section>
 
 				<!---Desktop homepage-->
+				<img class="study_img_container" id="study_img" src="images/scrolling.gif">
 				<img class="study_img_container" id="study_img" src="images/hifi_desktop1.png">
 
 				<section class="bio_text">
