--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<!---header image-->
 						<section class="hero_text">
 							<h1>UX Case Study: WCS</h1>
-							<p>Take a look at our proposed redesign of the Wild Conservation Society's Website.</p>
+							<p>Our proposed redesign of the Wild Conservation Society's Website.</p>
 						</section>
 
 					</section>
