--- a/index-2.html
+++ b/index-2.html
@@ -3,33 +3,33 @@
 <head>
 	<link href="css.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Chelsea+Market&display=swap" rel="stylesheet">
-	
-		<!-- Hotjar Tracking Code for https://ramieshreim.github.io/ -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:1560619,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+
+	<!-- Hotjar Tracking Code for https://ramieshreim.github.io/ -->
+	<script>
+		(function (h, o, t, j, a, r) {
+			h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+			h._hjSettings = { hjid: 1560619, hjsv: 6 };
+			a = o.getElementsByTagName('head')[0];
+			r = o.createElement('script'); r.async = 1;
+			r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+			a.appendChild(r);
+		})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+	</script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151727604-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151727604-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-  gtag('config', 'UA-151727604-1');
-</script>
-	
-	
+		gtag('config', 'UA-151727604-1');
+	</script>
+
+
 	<title> Case Study </title>
 
-		
+
 
 </head>
 
@@ -70,34 +70,32 @@
 
 			<div class="bio_rect">
 
-					<a name="our_goal"></a>
+				<a name="our_goal"></a>
 
-					<section class="hero" style="background-image: url(images/pills.png);">
-						<!---header image-->
-						<section class="hero_text">
-							<h1>App Concept: Pill Pal</h1>
-							<p>An app to help you stay on track.</p>
-						</section>
-
+				<section class="hero" style="background-image: url(images/pills.png);">
+					<!---header image-->
+					<section class="hero_text">
+						<h1>App Concept: Pill Pal</h1>
+						<p>An app to help you stay on track.</p>
 					</section>
 
-					<!---Header/Our Goal-->
-					<section class="bio_text">
+				</section>
+
+				<!---Header/Our Goal-->
+				<section class="bio_text">
 
 
 
-						
-
-						<h2>Our Goal <img class="section_icons" src="images/flag.png"></h2>
-
-						<p> Filler text here just because why not. I mean, its better than lorem ipsum am I right? Yeah I'm totally right. </p>
-					</section>
-
-					<!---FILLER IMAGE-->
-					<img class="study_img_container" id="study_img" src="images/paper_prototype.png">
 
 
+					<h2>Our Goal <img class="section_icons" src="images/flag.png"></h2>
 
+					<p> Filler text here just because why not. I mean, its better than lorem ipsum am I right? Yeah I'm
+						totally right. </p>
+				</section>
+
+				<!---FILLER IMAGE-->
+				<img class="study_img_container" id="study_img" src="images/paper_prototype.png">
 
 				<!--Heuristic Analysis-->
 				<section class="bio_text">
@@ -105,7 +103,7 @@
 
 						<h2>Heuristic Analysis <img class="section_icons" src="images/glass.png"></h2>
 
-						<p> 
+						<p>
 						</p>
 
 					</a>
@@ -130,7 +128,7 @@
 					</a>
 				</section>
 
-				
+
 
 				<!--Lofi Mockups-->
 				<section class="bio_text">
@@ -142,7 +140,7 @@
 					</a>
 				</section>
 
-		
+
 				<!--Hifi Mockups-->
 				<section class="bio_text">
 					<a name="hifi_mockups">
@@ -166,7 +164,7 @@
 							<br> <br></p>
 
 
-						<p> 
+						<p>
 							<a class="blockMe"
 								href="https://projects.invisionapp.com/share/R2T6RFCY4ZG#/screens/376099061_Notification_Screen"
 								target="blank">
