--- a/index-2.html
+++ b/index-2.html
@@ -36,7 +36,8 @@
 <div class="gradient"></div>
 
 <body>
-
+	 
+	<!--THIS IS THE WEB URL FOR THIS PAGE:https://ramieshreim.github.io/case_studies/index-2.html --->
 
 	<div class="bg_square">
 
