--- a/index-2.html
+++ b/index-2.html
@@ -95,8 +95,8 @@
 						totally right. </p>
 				</section>
 
-				<!---FILLER IMAGE-->
-				<img class="study_img_container" id="study_img" src="images/paper_prototype.png">
+				<!---pill pall logo-->
+				<img class="study_img_container" id="study_img" src="images/pill_pal/pillpal logo.png">
 
 				<!--Heuristic Analysis-->
 				<section class="bio_text">
