--- a/index-2.html
+++ b/index-2.html
@@ -134,8 +134,8 @@
 							To start off let's answer the first question, who is our target audience? We went in with
 							the assumption, of course, that people who need to take medicine regularly are our core
 							audience.
-							but we needed to know more about them. So we set out to interview a few people we know who
-							rely on medicine daily. </p>
+							but we needed to know more about them. So we set out to interview people who
+							rely on medicine daily. Pictured below is a little background on our interviewees. </p>
 
 
 					</a>
@@ -153,12 +153,12 @@
 						they all turned us down. It was actually hard to get people to agree to an interview at all
 						given how personal the subject matter is. It isn't easy to get people to talk openly about their
 						medical history. Of course, just because we only got interview data from women does not mean we
-						are operating under the assumption that only women would want to use this kind of app. (And we
+						were operating under the assumption that only women would want to use this kind of app. (And we
 						got men in our survey data, so no worries there.)
 						But it would have been really nice to get a man's perspective going into this.
 
 						<br> <br> So at this point we knew a little more about the people we're trying to help, but do
-						they want our help? Are pill taking apps viable?
+						they want our help? Are pill taking apps viable? To answer this, let's turn to some of the data from our survey.
 					</p>
 
 				</section>
@@ -208,9 +208,9 @@
 				<section class="bio_text">
 					<p> Indirect competitors like Alexa and Google aren't explicitly trying to solve the same problems
 						we are, but many people use them to set reminders because its convenient and easy. To be more
-						viable than them, we simply
-						need more features. This is necessary anyway since we are trying to solve more than one problem
-						at this point. Direct competitors like Lark are the real kickers. Lark is basically a personal
+						viable than them, we would
+						need more features. Which isn't a big deal since this is necessary anyway because we are trying to solve more than one problem.
+						Direct competitors like Lark are the real kickers. Lark is basically a personal
 						health coach in an app.
 						It not only keeps track of your medicine but it also lets you keep track of everything else
 						including your weight, your blood pressure, and so on. But lark isn't exactly free. To take
@@ -263,11 +263,11 @@
 
 
 					<p> Here is a very crude thumbnail of what the mood tracking tab would look like. This graph allows
-						you to quickly get an idea of how you've been feeling lately.
+						you to quickly get an idea of how your health has been recently.
 					</p>
 
 				</section>
-				<br> <br><br> <br>
+				<br> <br>
 
 				<img class="study_img_container" id="study_img" src="images/pill_pal/sketch.jpg"
 					style="width: 300px; height: auto; border-style: none;">
@@ -275,8 +275,8 @@
 				<section class="bio_text">
 
 
-					<p> And here is a much nicer drawing of the home screen. It tells you when you're supposed to take
-						your pills next and it gives you a preview of the dosage.
+					<p> And here is a much nicer drawing of the home screen. It tells you when your next dose is and gives you a preview of the medication
+						you need to take.
 					</p>
 
 				</section>
@@ -312,7 +312,7 @@
 				<section class="bio_text">
 
 
-					<p> As you can see, not a lot has really changed in terms of overall design since sketching. But of course it is much cleaner.   
+					<p> As you can see, not a lot has really changed in terms of overall design since sketching. But of course it is much cleaner. Pictured above is what the "home" and "pill" tabs look like now.  
 					</p>
 
 				</section>
@@ -328,6 +328,18 @@
 					</div>
 				</section>
 
+				<section class="bio_text">
+
+
+						<p> And here you can see the mood tracker, as well as the method we decided to go with to log your mood. It's a short "check-in" survey. If you tell the app you aren't feeling well 
+							then it will prompt you to contact your doctor or caretaker. This is something we borrowed from Lark, as we really liked the idea of the app talking to you and asking how you're feeling.
+
+							After testing this prototype with various users we got a few tips on how to make it better if it were to be developed further. The UI elements could be a bit larger, the mood tracker could be more detailed,
+							and some of the labeling could be improved as well. But overall our users were impressed with the app and the features that we came up with.   
+						</p>
+	
+					</section>
+
 
 				<!--Try it yourself-->
 				<section class="bio_text" id="centerMe">
@@ -337,15 +349,15 @@
 						<h2>Try It Yourself <img class="section_icons" src="images/check.png"></h2>
 
 
-						<p>If you want to try the prototype, click the link below to try iy out on Invision.
-							<br> <br></p>
+						<p>To see everything the prototype has to offer, I highly recommend you try it out for yourself. 
+							<br> </p>
 
 
 						<p>
 							<a class="blockMe"
 								href="https://projects.invisionapp.com/share/R2T6RFCY4ZG#/screens/376099061_Notification_Screen"
 								target="blank">
-								| Mobile Prototype |</a>
+								 Click here to try the prototype in Invision. </a>
 						</p>
 
 					</a>
