fixed spelling errors

--- a/index-2.html
+++ b/index-2.html
@@ -93,11 +93,9 @@
 					<p> The aim of this project was to create a prototype for an app that would
 						act as a personal medical companion. PillPal would allow you to set reminders
 						to take your medicine, keep track of your health status, and keep you in contact
-						with doctors and caretakers. My partners, Julie Chau, Lu Xia, and I were passionate about the
-						idea
-						of creating an app that could help improve quality of life for people in need of consistent
-						medical care.
-						Although there are already many applications in use today that do a similar thing,
+						with doctors and caretakers. My partners, Julie Chau, Lu Xia, and I are passionate about the
+						idea of creating an app that may improve quality of life for people in need of consistent
+						medical care. Although there are already many applications in use today that do something similar,
 						we were determined to create a concept that was appealing, competitive, and practical.
 					</p>
 				</section>
@@ -116,8 +114,8 @@
 
 						<h2>UX Research <img class="section_icons" src="images/book.png"></h2>
 
-						<p> Creating an app from scratch requires a lot of data. So our research was very extensive
-							given the short duration of the project (which was only a couple weeks.)
+						<p> Creating an app from scratch requires a lot of data. Our research was very extensive
+							for a project that's only a couple of weeks long.
 							In particular, in our user research we needed answers to these questions:
 						</p>
 
@@ -134,7 +132,7 @@
 							To start off let's answer the first question, who is our target audience? We went in with
 							the assumption, of course, that people who need to take medicine regularly are our core
 							audience.
-							but we needed to know more about them. So we set out to interview people who
+							But we needed to know more about them. So we set out to interview people who
 							rely on medicine daily. Pictured below is a little background on our interviewees. </p>
 
 
@@ -150,7 +148,7 @@
 					<p> The interviews were really useful, we got a lot of insights from people of different age groups.
 						But wait, have you noticed something? That's right. There are no men in this list. We tried our
 						best to find men to interview but
-						they all turned us down. It was actually hard to get people to agree to an interview at all
+						they all turned us down. It was actually hard to get anyone to agree to an interview at all
 						given how personal the subject matter is. It isn't easy to get people to talk openly about their
 						medical history. Of course, just because we only got interview data from women does not mean we
 						were operating under the assumption that only women would want to use this kind of app. (And we
@@ -201,15 +199,15 @@
 						own health, but as a working mother she also has to worry about caring for her children. On top
 						of that, she's very worried about the side effects of her medicine, and is always looking
 						for better treatments wherever possible. So now the real question becomes: "How do we help
-						people like Shelly while also having a competitive niche?" to answer that that's talk about
+						people like Shelly while also having a competitive niche?" to answer that let's talk about
 						our competitive analysis. </p>
 				</section>
 				<img class="study_img_container" id="study_img" src="images/pill_pal/competitive_analysis.png">
 				<section class="bio_text">
 					<p> Indirect competitors like Alexa and Google aren't explicitly trying to solve the same problems
-						we are, but many people use them to set reminders because its convenient and easy. To be more
+						we are, but many people use them to set reminders because it's convenient and easy. To be more
 						viable than them, we would
-						need more features. Which isn't a big deal since this is necessary anyway because we are trying to solve more than one problem.
+						need more features. Which isn't a big deal since we were going to have multiple features anyway. We are trying to solve more than one problem after all.
 						Direct competitors like Lark are the real kickers. Lark is basically a personal
 						health coach in an app.
 						It not only keeps track of your medicine but it also lets you keep track of everything else
@@ -247,8 +245,7 @@
 
 					<p> On this image alone you can see a number of things the app would include. The app would allow
 						you to keep track of what pills you are taking, how many medications you are on, and
-						it will even keep track of how many pills in each bottle you have left (assuming you've been
-						recording your doses.)
+						it will even keep track of how many pills in each bottle you have left.
 						There is also a calender at the top that shows you when to
 						refill your medicine. On the bottom there are 4 tabs, one for your profile, one for your pills,
 						one for the home screen, and one for your mood. The mood tab is part of a feature that
@@ -334,7 +331,7 @@
 						<p> And here you can see the mood tracker, as well as the method we decided to go with to log your mood. It's a short "check-in" survey. If you tell the app you aren't feeling well 
 							then it will prompt you to contact your doctor or caretaker. This is something we borrowed from Lark, as we really liked the idea of the app talking to you and asking how you're feeling.
 
-							After testing this prototype with various users we got a few tips on how to make it better if it were to be developed further. The UI elements could be a bit larger, the mood tracker could be more detailed,
+							After testing this prototype with various users, we got a few tips on how to make it better if it were to be developed further. The UI elements could be a bit larger, the mood tracker could be more detailed,
 							and some of the labeling could be improved as well. But overall our users were impressed with the app and the features that we came up with.   
 						</p>
 	
