--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
 	<link href="css.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Chelsea+Market&display=swap" rel="stylesheet">
 	
-		<!-- Hotjar Tracking Code for https://ramieshreim.github.io/ -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:1560619,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-
+	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151727604-1"></script>
 <script>
@@ -315,7 +304,7 @@
 							<br> <br></p>
 
 
-						<p> <a class="blockMe" href="https://projects.invisionapp.com/share/SHU4EZ2WA4D#/screens"
+						<p> <a class="blockMe" href="https://invis.io/B8V6PF3DAEF#/396976598_Homepage_Design"
 								target="blank">|
 								Desktop Prototype |
 							</a>
